--- a/cv.html
+++ b/cv.html
@@ -113,36 +113,36 @@
 				</h2>
 
 				<ul style="list-style: none;">
-					<li>
+					
 						
-						<p><b>Moshiur Rahman</b></p>
+						<div style="display: inline-block; width: 50%;">
 
-						<p>
-							<i>Director , FSIT</i> <br>	
-							Amarican International University (AIUB) <br>  
-							<b>Contact No: </b>01919448787 <br>
-							<b>Email: </b>riyad298@gmail.com <br>
-							<b>Web: </b>www.riyadahsan.com</p>
-						</p>
+							<p><b>Moshiur Rahman</b></p>
 
-
-					</li>
-			
-
-			
-					<li>
-						<p><b>Dip Nandi</b></p>
-
-						<p>
-							<i>Head , Undergraduate Program</i> <br>
-							Amarican International University (AIUB) <br>
-							<b>Contact No: </b>01919448787 <br>
-							<b>Email: </b>riyad298@gmail.com <br>
-							<b>Web: </b>www.riyadahsan.com</p>
-						</p>
+							<p>
+								<i>Director , FSIT</i> <br>	
+								Amarican International University (AIUB) <br>  
+								<b>Contact No: </b>01919448787 <br>
+								<b>Email: </b>riyad298@gmail.com <br>
+								<b>Web: </b>www.riyadahsan.com</p>
+							</p>
+						</div>
 
 
-					</li>
+						<div style="display: inline-block;">
+
+							<p><b>Dip Nandi</b></p>
+
+							<p>
+								<i>Head , Undergraduate Program</i> <br>
+								Amarican International University (AIUB) <br>
+								<b>Contact No: </b>01919448787 <br>
+								<b>Email: </b>riyad298@gmail.com <br>
+								<b>Web: </b>www.riyadahsan.com</p>
+							</p>
+
+						</div>
+
 
 
 				</ul>
